[DSPlayer] added the ability to auto-load new audio decoder filters based on rules (into dsfilterconfig.xml)(Patch from blinkeb)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@28144 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2586,11 +2586,23 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\FilterCoreFactory\FilterCoreFactory.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\FilterCoreFactory\FilterCoreFactory.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\xbmc\cores\DSPlayer\FilterCoreFactory\FilterSelectionRule.cpp"
 						>
 					</File>
 					<File
 						RelativePath="..\..\xbmc\cores\DSPlayer\FilterCoreFactory\FilterSelectionRule.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\FilterCoreFactory\GlobalFilterSelectionRule.h"
 						>
 					</File>
 				</Filter>
