Refactored out the unnecessary C on the start of all the Myth related classes and source files.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@28207 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/FileSystem/Makefile.in
+++ b/xbmc/FileSystem/Makefile.in
@@ -14,9 +14,6 @@ SRCS=ASAPFileDirectory.cpp \
      CDDADirectory.cpp \
      cddb.cpp \
      cdioSupport.cpp \
-     CMythDirectory.cpp \
-     CMythFile.cpp \
-     CMythSession.cpp \
      DAAPDirectory.cpp \
      DAVDirectory.cpp \
      DirectoryCache.cpp \
@@ -60,6 +57,9 @@ SRCS=ASAPFileDirectory.cpp \
      MusicDatabaseDirectory.cpp \
      MusicFileDirectory.cpp \
      MusicSearchDirectory.cpp \
+     MythDirectory.cpp \
+     MythFile.cpp \
+     MythSession.cpp \
      NptXbmcFile.cpp \
      NSFFileDirectory.cpp \
      OGGFileDirectory.cpp \
