fixed: linux build, missing file in makefile.in fixed: incorrect ifdefs for linux only include
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/hi-phi-audio@28244 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/cores/dvdplayer/Makefile.in
+++ b/xbmc/cores/dvdplayer/Makefile.in
@@ -23,7 +23,8 @@ SRCS=	DVDAudio.cpp \
 	DVDFileInfo.cpp \
 	DVDPlayerAudioResampler.cpp \
 	DVDTSCorrection.cpp \
-	Edl.cpp
+	Edl.cpp \
+	PCMSampleConverter.cpp
 
 LIB=	DVDPlayer.a
 
