--- a/xbmc/lib/cmyth/Win32/libcmyth.vcproj
+++ b/xbmc/lib/cmyth/Win32/libcmyth.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..;../include;include;../librefmem;../libcmyth"
+				AdditionalIncludeDirectories="..;../include;include;../librefmem;../libcmyth;../../../win32"
 				PreprocessorDefinitions="WIN32;DEBUG;_LIB;inline=__inline"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -121,7 +121,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..;../include;include;../librefmem;../libcmyth"
+				AdditionalIncludeDirectories="..;../include;include;../librefmem;../libcmyth;../../../win32"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;inline=__inline"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
