merged: changes from trunk. revs: r28188:28276
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28282 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/FileSystem/Makefile.in
+++ b/xbmc/FileSystem/Makefile.in
@@ -15,9 +15,6 @@ SRCS=AddonsDirectory.cpp \
      CDDADirectory.cpp \
      cddb.cpp \
      cdioSupport.cpp \
-     CMythDirectory.cpp \
-     CMythFile.cpp \
-     CMythSession.cpp \
      DAAPDirectory.cpp \
      DAVDirectory.cpp \
      DirectoryCache.cpp \
@@ -31,6 +28,7 @@ SRCS=AddonsDirectory.cpp \
      FileCDDA.cpp \
      File.cpp \
      FileCurl.cpp \
+     FileSFTP.cpp \
      FileDAAP.cpp \
      FileFactory.cpp \
      FileFileReader.cpp \
@@ -61,6 +59,9 @@ SRCS=AddonsDirectory.cpp \
      MusicDatabaseDirectory.cpp \
      MusicFileDirectory.cpp \
      MusicSearchDirectory.cpp \
+     MythDirectory.cpp \
+     MythFile.cpp \
+     MythSession.cpp \
      NptXbmcFile.cpp \
      NSFFileDirectory.cpp \
      OGGFileDirectory.cpp \
@@ -89,6 +90,7 @@ SRCS=AddonsDirectory.cpp \
      VTPSession.cpp \
      VTPFile.cpp \
      ZeroconfDirectory.cpp \
+     SFTPDirectory.cpp \
      ZipDirectory.cpp \
      ZipManager.cpp
 
