--- a/xbmc/addons/Makefile
+++ b/xbmc/addons/Makefile
@@ -1,10 +1,10 @@
 INCLUDES=-I. -I../ -I../linux -I../../guilib -I../utils -I../cores/ffmpeg -I../../include
 
-SRCS=AddonHelpers_Addon.cpp \
-     AddonHelpers_GUI.cpp \
-     AddonHelpers_PVR.cpp \
-     AddonHelpers_Vis.cpp \
-     AddonHelpers_local.cpp\
+#SRCS=AddonHelpers_Addon.cpp \
+#     AddonHelpers_GUI.cpp \
+#     AddonHelpers_PVR.cpp \
+#     AddonHelpers_Vis.cpp \
+SRCS= AddonHelpers_local.cpp\
 
 LIB=AddonHelpers.a
 
