changed: Create helper addon libraries as dll and load them during runtime fixed: Build of PVR Clients under Linux fixed: Added PVR clients to addon framework again (was lost after trunk merge) changed: Location for helper libraries and headers is now a subfolder in "addons/libraries/addon/" fixed: PVR function is usable again under Linux (Windows need some work to the helper libraries)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28365 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/configure.in
+++ b/configure.in
@@ -1077,6 +1077,8 @@ OUTPUT_FILES="Makefile \
              xbmc/visualizations/iTunes/Makefile \
              xbmc/pvrclients/vdr-streamdev/Makefile \
              xbmc/FileSystem/Makefile \
+             lib/libXBMC_addon/Makefile \
+             lib/libXBMC_pvr/Makefile \
              tools/Linux/xbmc.sh \
              tools/TexturePacker/Makefile \
              tools/EventClients/Clients/OSXRemote/Makefile"
