--- a/xbmc/pvrclients/vdr-streamdev/Makefile.in
+++ b/xbmc/pvrclients/vdr-streamdev/Makefile.in
@@ -11,9 +11,8 @@ ARCH     = @ARCH@
 DESTDIR ?=
 PREFIX  ?= /usr/local
 ADDONDIR = $(PREFIX)/share/xbmc/addons
-#LIBS     = -L../../../lib/libXBMC_addon -lXBMC_addon -L../../../lib/libXBMC_pvr -lXBMC_pvr
-LIBS     = ../../../lib/libXBMC_pvr/libXBMC_pvr.a ../../../lib/libXBMC_addon/libXBMC_addon.a ../../../lib/libXBMC_gui/libXBMC_gui.a
-INCLUDES = -I. -I../../linux -I../../ -I ../../../include
+LIBS     = -ldl
+INCLUDES = -I. -I../../linux -I../../ -I ../../../xbmc/addons/include
 DEFINES += -D_LINUX -fPIC
 LIBDIR   = ../../../addons/pvr/VDR
 LIB      = ../../../addons/pvr/VDR/XBMC_VDR.pvr
