fixed: Localization of pvr addons changed: replaced uuid's with clear names in description.xml of pvr addons added: changes from trunk r28390
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28391 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/pvrclients/tvheadend/Makefile
+++ b/xbmc/pvrclients/tvheadend/Makefile
@@ -16,8 +16,8 @@ ifeq ($(findstring Darwin,$(shell uname -a)), Darwin)
 INCLUDES +=  -I/opt/local/include
 endif
 DEFINES += -D_LINUX -fPIC
-LIBDIR   = ../../../addons/pvr/Tvheadend
-LIB      = ../../../addons/pvr/Tvheadend/XBMC_Tvheadend.pvr
+LIBDIR   = ../../../addons/com.lonelycoder.hts.pvr
+LIB      = ../../../addons/com.lonelycoder.hts.pvr/XBMC_Tvheadend.pvr
 
 CC       ?= gcc
 CFLAGS   ?= -g -O2 -Wall
