[WIN32] compile Milkdrop as addon (doesn't work yet). It throws memory exceptions when running with or without preset files (with preset files in eval.c:line 69). Configuration also fails with a memory exception. help is appreciated :)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@28522 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/visualizations/Milkdrop/Plugin.vcproj
+++ b/xbmc/visualizations/Milkdrop/Plugin.vcproj
@@ -46,6 +46,7 @@
 				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;PLUGIN_EXPORTS;HAS_DX;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
+				ExceptionHandling="1"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
@@ -65,8 +66,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="D3dx9.lib"
-				OutputFile="../../../visualisations/MilkDrop_win32dx.vis"
-				LinkIncremental="2"
+				OutputFile="../../../addons/com.nullsoft.milkdrop.xbmc/MilkDrop_win32dx.vis"
+				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/Plugin.pdb"
 				SubSystem="2"
@@ -144,7 +145,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="D3dx9.lib"
-				OutputFile="../../../visualisations/MilkDrop_win32dx.vis"
+				OutputFile="../../../addons/com.nullsoft.milkdrop.xbmc/MilkDrop_win32dx.vis"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetName).pdb"
@@ -189,10 +190,6 @@
 			>
 			<File
 				RelativePath=".\MilkdropXBMC.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\xbmc_vis.h"
 				>
 			</File>
 			<File
