fixed: Build after trunk merge added: Copy of libhts to TVHeadend client added: Wrongly deleted helper libraries header files
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28605 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/lib/libXBMC_addon/Makefile.in
+++ b/lib/libXBMC_addon/Makefile.in
@@ -5,7 +5,7 @@ CXXFLAGS=-fPIC
 LIBNAME=libXBMC_addon
 OBJS=$(LIBNAME).o
 
-LIB_SHARED=../../addons/libraries/addon/libXBMC_addon/$(LIBNAME)-$(ARCH).so
+LIB_SHARED=../../addons/org.xbmc.addon.library/$(LIBNAME)-$(ARCH).so
 
 all: $(LIB_SHARED)
 
