fixed: compile error with OPENGL
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@28655 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/visualizations/WaveForm/Waveform.vcproj
+++ b/xbmc/visualizations/WaveForm/Waveform.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="visWaveform"
 	ProjectGUID="{D450FE9A-CE56-4496-B4AB-379094E642F2}"
 	RootNamespace="visWaveform"
@@ -42,6 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="..\..\..\lib\libSDL-WIN32\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;HAS_SDL_OPENGL;HAS_SDL;WAVEFORM_EXPORTS;_WIN32PC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
