fixed: Usage of demuxers inside pvr addon's fixed: Several bugfixes and improvements added: Patch "hts-tvheadend-2.10-AddSignalQuality.diff" to get signal quality from hts added: Demuxer code to hts addon fixed: hts addon can play channels now (no epg and nothing else) fixed: Triggering (open/close) of seek bar during live tv playback on every frame move changed: reverted XBMC's HTSP code parts inside DVDPlayer to trunk version added: Usage of User/Pass inside hts addon for tvheadend
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28676 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/lib/libXBMC_pvr/Makefile.in
+++ b/lib/libXBMC_pvr/Makefile.in
@@ -1,5 +1,5 @@
 ARCH=@ARCH@
-INCLUDES=-I. -I../../xbmc/addons/include -I../../xbmc
+INCLUDES=-I. -I../../xbmc/addons/include -I../../xbmc -I../../xbmc/cores/dvdplayer/DVDDemuxers
 DEFINES+=
 CXXFLAGS=-fPIC
 LIBNAME=libXBMC_pvr
