[DSPlayer] Improved Fast Forward (thanks to Ti-Ben)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@28681 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -3591,6 +3591,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\xbmc\utils\PerformanceSample.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\PerformanceStats.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\xbmc\PowerManager.cpp"
 					>
 				</File>
