changed: Connect to tvheadend over new class cHTSPData inside addon added: Thread handling class added: Support for EPG and improved Channel loading fixed: English string for PVR addons inside addon browser missing fixed: TVHeadend addon now support everything except recordings and timers
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28682 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/pvrclients/tvheadend/Makefile
+++ b/xbmc/pvrclients/tvheadend/Makefile
@@ -31,7 +31,7 @@ endif
 
 -include Make.config
 
-OBJS = client.o HTSPSession.o HTSPDemux.o
+OBJS = client.o HTSPSession.o HTSPData.o HTSPDemux.o thread.o tools.o
 
 all: pvrTvheadend
 
