added: TextureCache class that handles (among other things in future) caching .dds versions of thumbs. If a .dds version exists, XBMC will load it. If a .dds version does not exist, and you have <useddsfanart> set to true in advancedsettings, then XBMC will generate a .dds version (DXT1) for you.  May work very badly for transparent thumbs.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@28714 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/Makefile.in
+++ b/xbmc/Makefile.in
@@ -214,6 +214,7 @@ SRCS=Application.cpp \
      WinEventsSDL.cpp \
      AdvancedSettings.cpp \
      Bookmark.cpp \
+     TextureCache.cpp \
 
 LIB=xbmc.a
 
