added ability for slider to return the percentage value to the scripts
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@28765 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -6153,6 +6153,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\xbmc\lib\libPython\xbmcmodule\controlslider.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\xbmc\lib\libPython\xbmcmodule\controlradiobutton.cpp"
 						>
 					</File>
