[WIN32] fixed broken build
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@28838 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -3318,6 +3318,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\xbmc\TextureDatabase.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\TextureDatabase.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\xbmc\utils\Thread.cpp"
 					>
 				</File>
