Add .dummy to list of files to should be removed by make distclean.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@28864 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/configure.in
+++ b/configure.in
@@ -1070,6 +1070,8 @@ fi
 AC_CONFIG_FILES([.dummy])
 
 AC_CONFIG_FILES([${OUTPUT_FILES}])
+OUTPUT_FILES+=" \
+             .dummy"
 AC_SUBST(CFLAGS)
 AC_SUBST(CXXFLAGS)
 AC_SUBST(INCLUDES)
