--- a/Makefile.in
+++ b/Makefile.in
@@ -90,6 +90,7 @@ endif
 
 LIB_DIRS=\
 	xbmc/lib/cximage-6.0 \
+	xbmc/lib/libcpluff \
 	xbmc/lib/libexif \
 	xbmc/lib/libhdhomerun \
 	xbmc/lib/libid3tag \
@@ -352,9 +353,11 @@ ifeq ($(or $(findstring powerpc,$(ARCH)),$(findstring x86_64-linux,$(ARCH))),)
 endif
 imagelib: dllloader
 	$(MAKE) -C xbmc/lib/cximage-6.0
+libcpluff: dllloader
+	$(MAKE) -C xbmc/lib/libcpluff
 
 codecs: papcodecs dvdpcodecs
-libs: libhdhomerun libid3tag imagelib libexif python
+libs: libcpluff libhdhomerun libid3tag imagelib libexif python
 externals: codecs libs python visualizations screensavers
 
 xcode_depends: \
