--- a/configure.in
+++ b/configure.in
@@ -1032,6 +1032,7 @@ OUTPUT_FILES="Makefile \
              guilib/Makefile \
              guilib/common/Makefile \
              xbmc/lib/libass/xbmc/Makefile \
+             xbmc/lib/libcpluff/Makefile \
              xbmc/lib/libXBMS/Makefile \
              xbmc/lib/libRTV/Makefile \
              xbmc/lib/libexif/Makefile \
@@ -1119,6 +1120,10 @@ else
 fi
 ])
 ])
+
+XB_CONFIG_MODULE([xbmc/lib/cpluff-0.1.3], [
+    ./configure
+], [0])
 
 XB_CONFIG_MODULE([xbmc/lib/libPython/Python], [
   if test "$host_vendor" = "apple" ; then
